fixed the whitespace text wrapping on navbar and footer

--- a/balto-ui/src/components/Footer/Footer.css
+++ b/balto-ui/src/components/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer {
     /* position:fixed; */
+    white-space: nowrap; /*prevents the texts from wrapping*/
     bottom:0;
     width:100%;
     height:245px;   /* Height of the footer */
